# Local-Host-Discord-MCP-server

./: .gitignore  README.md
.github/workflows/: daily-briefing.yml  wednesday-recap-jira.yml
mcp-otter/: .gitignore  LICENSE  README.md  pyproject.toml  run_otter.py
mcp-otter/src/otter_mcp/: __init__.py  client.py  server.py
mcp_discord/: .env  discord_client.py  requirements.txt  server.py  test_mcp.py
mcp_todo/: auth.py  requirements.txt  server.py  test_mcp.py  todo_client.py
scripts/: export_ms_refresh_token.py  get_google_refresh_token.py
