[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otter-mcp"
version = "0.1.0"
description = "MCP server for Otter.ai transcript search and retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Darren Zal", email = "zaldarren@gmail.com" }
]
keywords = ["mcp", "otter", "transcription", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "requests-toolbelt>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/DarrenZal/otter-mcp"
Repository = "https://github.com/DarrenZal/otter-mcp"
Issues = "https://github.com/DarrenZal/otter-mcp/issues"

[project.scripts]
otter-mcp = "otter_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/otter_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
